--- a/lec4/LC2.html
+++ b/lec4/LC2.html
@@ -4,17 +4,15 @@
 		<!--The head contains all of the confirguration items for our page-->
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta content="en-us" http-equiv="Content-Language" />
-		<title>Challenge One</title>
-		<link href="style.css" type="text/css" rel="stylesheet" />
+		<title>Code Challenge 2</title>
+		<link href="styles2.css" type="text/css" rel="stylesheet" />
 	</head>
 
 	<body>
-		<!--The body contains all of the content for our page-->
 
-        <h1 id="firstHeader">This is some text</h1>
-        <p id="greenText">This is also some text...</p>
-        <p class="greenText">And so is this!</p>
-
-
+		<div class="pb"><p class="pbt">This is some content</p></div>
+		<p class="gt">This is some text</p>
+		<p class="lot">More <span class="rt">text</span> than before</p>
+		<p class="spt">I <span class="yt">CAN'T</span> believe it's not more text</p>
 
 </body></html>
