--- a/lec4/LC3.html
+++ b/lec4/LC3.html
@@ -4,17 +4,17 @@
 		<!--The head contains all of the confirguration items for our page-->
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta content="en-us" http-equiv="Content-Language" />
-		<title>Challenge One</title>
-		<link href="style.css" type="text/css" rel="stylesheet" />
+		<title>Code Challenge 3</title>
+		<link href="styles3.css" type="text/css" rel="stylesheet" />
 	</head>
 
 	<body>
-		<!--The body contains all of the content for our page-->
 
-        <h1 id="firstHeader">This is some text</h1>
-        <p id="greenText">This is also some text...</p>
-        <p class="greenText">And so is this!</p>
-
-
+		<div class="gr">
+			<div class="bb"></div>
+			<div class="rt">This is the first box</div>
+			<div class="dgt">This is also in the first box</div>
+			<div class="pt">This is some awesome text</div>
+		</div>
 
 </body></html>
