--- a/lec4/LC1.html
+++ b/lec4/LC1.html
@@ -4,17 +4,15 @@
 		<!--The head contains all of the confirguration items for our page-->
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta content="en-us" http-equiv="Content-Language" />
-		<title>Challenge One</title>
-		<link href="style.css" type="text/css" rel="stylesheet" />
+		<title>Code Challenge 1</title>
+		<link href="styles.css" type="text/css" rel="stylesheet" />
 	</head>
 
 	<body>
-		<!--The body contains all of the content for our page-->
 
-        <h1 id="firstHeader">This is some text</h1>
-        <p id="greenText">This is also some text...</p>
-        <p class="greenText">And so is this!</p>
-
-
+        <div class="box">
+            <div class="gb">This is text</div>
+            <div class="yb"><img src="images/Capture.JPG" alt="Brock Badger?"/></div>
+        </div>
 
 </body></html>
