--- a/Assignment2/assignment2.html
+++ b/Assignment2/assignment2.html
@@ -16,9 +16,9 @@
         <h2>Lorem, ipsum.</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor optio cum hic rerum iste! Mollitia natus cumque quia adipisci atque culpa voluptatibus minima, magni esse, ducimus sequi sed cupiditate accusantium asperiores nihil fugiat? Magnam tempore corporis iusto adipisci quisquam, voluptatem hic temporibus repellat distinctio repudiandae aspernatur totam molestiae omnis quam!</p>
         <h2>Relative Image</h2>
-        <img src="images/fish.jpg" alt="Image of a Fish">
+        <img src="images/fish.jpg" alt="Image of a Fish" />
         <h2>Absolute Image</h2>
-        <img src="https://t3.ftcdn.net/jpg/05/70/41/10/360_F_570411035_SEKszWdl4zhJw4GjBcHiDaoj7D7IXXv8.jpg" alt="Image of an Interesting Fish"><br>
+        <img src="https://t3.ftcdn.net/jpg/05/70/41/10/360_F_570411035_SEKszWdl4zhJw4GjBcHiDaoj7D7IXXv8.jpg" alt="Image of an Interesting Fish" /><br/>
         <a href="examplepage.html">Relative Link</a>
         <a href="https://brocku.ca/">Absolute Link</a>
         <h2>Ordered List</h2>
@@ -47,9 +47,9 @@
         <h2>Example of absolute, relative and fixed elements - Also example of grouped selector (Penguin width and height grouped)</h2>
 
         <div class="container">
-            <img class="penguin absolute" src=images/penguin.png alt= "Image of a Penguin">
-            <img class="penguin relative" src=images/penguin.png alt= "Image of a Penguin">
-            <img class="penguin fixed" src=images/penguin.png alt= "Image of a Penguin">
+            <img class="penguin absolute" src=images/penguin.png alt="Image of a Penguin" />
+            <img class="penguin relative" src=images/penguin.png alt="Image of a Penguin" />
+            <img class="penguin fixed" src=images/penguin.png alt="Image of a Penguin" />
         </div>
 
         <div class="nested">
