--- a/Assignment2/assignment2.html
+++ b/Assignment2/assignment2.html
@@ -47,9 +47,9 @@
         <h2>Example of absolute, relative and fixed elements - Also example of grouped selector (Penguin width and height grouped)</h2>
 
         <div class="container">
-            <img class="penguin absolute" src=images/penguin.png alt="Image of a Penguin" />
-            <img class="penguin relative" src=images/penguin.png alt="Image of a Penguin" />
-            <img class="penguin fixed" src=images/penguin.png alt="Image of a Penguin" />
+            <img class="penguin absolute" src="images/penguin.png" alt="Image of a Penguin" /> 
+            <img class="penguin relative" src="images/penguin.png" alt="Image of a Penguin" />
+            <img class="penguin fixed" src="images/penguin.png" alt="Image of a Penguin" />
         </div>
 
         <div class="nested">
