--- a/Assignment2/assignment2.html
+++ b/Assignment2/assignment2.html
@@ -57,7 +57,7 @@
         </div>
         <div class="box">
             <h2>Box model example</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, libero? Esse, ipsum? Rem nihil, beatae, vitae eveniet doloremque enim magni saepe iusto quo in quas non laboriosam eos ab assumenda doloribus perferendis ipsam alias perspiciatis porro est repudiandae. Ea quis atque tenetur maxime alias dolorum placeat? Eveniet a magnam minus.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, dicta tenetur. Ut ad repellendus, molestiae quos omnis quibusdam sit provident labore, ipsa perferendis rerum odio, enim magnam. Quo, reprehenderit maiores possimus laboriosam consequatur labore assumenda id aliquid vitae vel dignissimos.</p>
         </div>
 
 </body></html>
