--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -1,59 +1,63 @@
-<!--?xml version="1.0" encoding="UTF-8"?-->
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head>
-		<!--The head contains all of the confirguration items for our page-->
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<meta content="en-us" http-equiv="Content-Language" />
-		<title>Bavarian Brathus</title>
-		<link href="styles.css" type="text/css" rel="stylesheet" />
-	</head>
-
-	<body>
-        <header>
-            <h1><img id="germanflag" src="images/germanflag.jpg" alt="German Flag"/>Bavarian Brathaus</h1>
-            <a href="#Oktoberfest2012"><h2>Oktoberfest 2012</h2></a>
-        </header>
-        <div class="navbar">
-            <a href="#menu">Menu</a>
-            <a href="#attractions">Attractions</a>
-            <a href="#reservation">Reservation</a>
-            <a href="#contact">Contact</a>
-            <a href="#reviews">Reviews</a>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Bavarian Brathaus</title>
+    <link href="styles.css" type="text/css" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <h1><img id="germanflag" src="images/germanflag.jpg" alt="German Flag">Bavarian Brathaus</h1>
+        <h2><a href="#Oktoberfest2012">Oktoberfest 2012</a></h2>
+    </header>
+    <div class="navbar">
+        <a href="#menu">Menu</a>
+        <a href="#attractions">Attractions</a>
+        <a href="#reservation">Reservation</a>
+        <a href="#contact">Contact</a>
+        <a href="#reviews">Reviews</a>
+    </div>
+    <div class="body-container">
+        <div class="left-body">
+            <h3>Our Menu</h3>
+            <ul>
+                <li><a href="#regularmenu">Regular Menu</a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quod dolorum, neque tempora doloribus officia expedita ducimus ad vel nemo.</p>
+                </li>
+                <li><a href="#kidsmenu">Kids Menu</a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quod dolorum, neque tempora doloribus officia expedita ducimus ad vel nemo.</p>
+                </li>
+                <li><a href="#drinksmenu">Drinks Menu</a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quod dolorum, neque tempora doloribus officia expedita ducimus ad vel nemo.</p>
+                </li>
+                <li><a href="#vegetarianmenu">Vegetarian Menu</a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quod dolorum, neque tempora doloribus officia expedita ducimus ad vel nemo.</p>
+                </li>
+                <li><a href="#dessertmenu">Dessert Menu</a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quod dolorum, neque tempora doloribus officia expedita ducimus ad vel nemo.</p>
+                </li>
+            </ul>
         </div>
-        
-        <div class="body-container">
-            <div class="left-body">
-                <h3>Our Menu</h3>
-                <ul>
-                    <li><a href="#regularmenu">Regular Menu</a></li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quod dolorum, neque tempora doloribus officia expedita ducimus ad vel nemo.</p>
-                    <li><a href="#kidsmenu">Kids Menu</a></li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quod dolorum, neque tempora doloribus officia expedita ducimus ad vel nemo.</p>
-                    <li><a href="#drinksmenu">Drinks Menu</a></li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quod dolorum, neque tempora doloribus officia expedita ducimus ad vel nemo.</p>
-                    <li><a href="#vegetarianmenu">Vegetarian Menu</a></li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quod dolorum, neque tempora doloribus officia expedita ducimus ad vel nemo.</p>
-                    <li><a href="#dessertmenu">Dessert Menu</a></li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quod dolorum, neque tempora doloribus officia expedita ducimus ad vel nemo.</p>
-                </ul>
-            </div>
-            <div class="right-body">
-                <h3>Oktoberfest Specials</h3>
-                <div class="right-imgs">
-                    <p><img src="images/imgb1.jpg" alt="Oktoberfest Special 1"/>Lorem ipsum dolor sit amet.</p>
-                    <p><img src="images/imgb2.jpg" alt="Oktoberfest Special 2"/>Lorem ipsum dolor sit amet.</p>
-                    <p><img src="images/imgb3.jpg" alt="Oktoberfest Special 3"/>Lorem ipsum dolor sit amet.</p>
-                    <p><img src="images/imgb4.jpg" alt="Oktoberfest Special 4"/>Lorem ipsum dolor sit amet.</p>
-                    <p><img src="images/imgb1.jpg" alt="Oktoberfest Special 5"/>Lorem ipsum dolor sit amet.</p>
-                    <p><img src="images/imgb2.jpg" alt="Oktoberfest Special 6"/>Lorem ipsum dolor sit amet.</p>
-                </div>
+        <div class="right-body">
+            <h3>Oktoberfest Specials</h3>
+            <div class="right-imgs">
+                <p><img src="images/imgb1.jpg" alt="Oktoberfest Special 1">Lorem ipsum dolor sit amet.</p>
+                <p><img src="images/imgb2.jpg" alt="Oktoberfest Special 2">Lorem ipsum dolor sit amet.</p>
+                <p><img src="images/imgb3.jpg" alt="Oktoberfest Special 3">Lorem ipsum dolor sit amet.</p>
+                <p><img src="images/imgb4.jpg" alt="Oktoberfest Special 4">Lorem ipsum dolor sit amet.</p>
+                <p><img src="images/imgb1.jpg" alt="Oktoberfest Special 5">Lorem ipsum dolor sit amet.</p>
+                <p><img src="images/imgb2.jpg" alt="Oktoberfest Special 6">Lorem ipsum dolor sit amet.</p>
             </div>
         </div>
-        
-        <div class="footer">
-            <div class="socials">
-                <a href="#facebooklink"><img src="images/facebook.png" alt="Facebook"/></a>
-                <a href="#twitterlink"><img src="images/twitter.png" alt="Twitter"/></a>
-                <a href="#instagramlink"><img src="images/instagram.png" alt="Instagram"/></a>
-                <a href="#youtubelink"><img src="images/youtube.png" alt="YouTube"/></a>
-            </div>
-            <p class="copyright">&copy; 2023 Bavarian Brathaus | All rights reserved</p>
+    </div>
+    <div class="footer">
+        <div class="socials">
+            <a href="#facebooklink"><img src="images/facebook.png" alt="Facebook"></a>
+            <a href="#twitterlink"><img src="images/twitter.png" alt="Twitter"></a>
+            <a href="#instagramlink"><img src="images/instagram.png" alt="Instagram"></a>
+            <a href="#youtubelink"><img src="images/youtube.png" alt="YouTube"></a>
         </div>
-
-
-</body></html>
+        <p class="copyright">&copy; 2023 Bavarian Brathaus | All rights reserved</p>
+    </div>
+</body>
+</html>
