--- a/lec9/index3.html
+++ b/lec9/index3.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
@@ -11,8 +11,8 @@
 <body>
 
 	<p id="output">OUTPUT</p>
-	<input type="number" id="number1" placeholder="Number 1">
-	<input type="number" id="number2" placeholder="Number 2">
+	<input type="text" id="number1" placeholder="Number 1" />
+	<input type="text" id="number2" placeholder="Number 2" />
 	<button onclick="addition()">Add</button>
 
 </body>
